made some changes

--- a/index.html
+++ b/index.html
@@ -14,72 +14,47 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="inner">
-					<h1>Sooraj</h1>
-					<p> Software Engineer on Mars </p>
+					<h1>Sooraj Ali Panhwar</h1>
+					<p> Digital Knight and Code Wizard </p>
 				</div>
-
 			</header>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-				<!-- <h2>Currently out in the space contesting aliens in programming on a planet light years away from earth:)</h2> -->
-				<h1>	About Sooraj	</h2>
+				<h1>About Sooraj</h1>
 				<p class="description">
-					Sooraj Ali Panhwar a.k.a Skyler, was born on the beautiful planet known by humans as earth. (the place of his birth w.r.t this universe is now millions of(getTimeDiff(SHAN.getDoB(), Date.now()) * earthSpeedPerSecond)
-					<br>
-					<code id="earth_dist"></code>
-					<br> miles away from your current location in the universe, so you probably won't be able to go see that place ever :( ).
-					<br>
-					SHAN embarked on a journey of Software Engineering at Folio3 (Pvt.) Ltd and learned the software development the hard way.
-
-					<br>
-					He is fascinated by the way this profound universe is beautifully created by the one God.
-
-					<br> <br>
-					What he believes? <br>
-					Every human has got a limited heart beats, and thus life. Make Best use of it (though the word BesT is ambiguous here).
-					<br> <br>
+					Sooraj Ali Panhwar a.k.a Sooraj, was born on Earth, a planet spinning through the vast, mesmerizing cosmos. Unlike most, his journey in this chaotic yet fascinating world revolves around making sense of the digital universe.
+					<br><br>
+					Driven by curiosity and an insatiable appetite for tech, Sooraj delved deep into the realms of computer science at Quaid-E-Awam University of Engineering, Science and Technology, Nawabshah. Computer Science was more than just a subject for him—it was a way of life. He’s the kind of person who prefers the company of algorithms and code over crowded parties and noisy gatherings, often working late into the night (usually when exams are looming).
+					<br><br>
+					What defines him? <br>
+					Sooraj is that lone wolf, navigating the world in his own unique way. Though he may not fit the traditional mold of a social butterfly, he finds solace in his close-knit circle of friends, indulging in discussions, sharing jokes (even if he’s more of a listener), and, of course, binge-watching Hollywood movies and sharing them with anyone who cares to ask.
+					<br><br>
+					His love for data science and app development is unmatched, making him a true digital craftsman. He's not just another face in the crowd; he’s a digital knight, wielding code like a sword and venturing into realms that most shy away from. With a flair for strategy in games and a mind wired for technology, Sooraj remains unfazed by the mundane. In his quiet way, he thrives on conquering challenges that require sharp wit and creative solutions.
+					<br><br>
 					How to reach him? <br>
-					<!--If you are thinking about finding him on FB, thats two times a bad idea; (1) you won't find him there and (2) you'll most probably end up wasting your precious limited heart beats.
-					-->
-					Get him by email (if you are lucky enough to find 1).
-					<br> <br>
-					<bf>His hobbies?</bf> <br>
-					Sometimes he is found teaching programming to aliens, at others measuring mass of sub atomic particles.
-					At times, he travels around galaxies and extra-terrestrial bodies (it's not impossible if you are programmer, visiting the sun for instance,
-					solarSystem.simulateSun(param1, ...)
-					).
-					All that you read above, is surely written by a human being which can be considered as a piece of art. Currently, Skyler is interested in (making scientists) making machines smart enough to write something similar which is both creative and sensible.
-					<br> <br>
-					That's all for now
+					Well, if you’re interested in exchanging thoughts, collaborating, or just need to talk tech, Sooraj is just an email away (if you manage to find it, that is).
+					<br><br>
+					Hobbies and passions? <br>
+					From diving into the mysteries of books to exploring the possibilities in tech, Sooraj’s interests are as diverse as the genres he reads. Whether it’s romance, mystery, adventure, or philosophy, he finds nuggets of wisdom and inspiration to fuel his next project.
+					<br><br>
+					For those lucky enough to know him, Sooraj is a laid-back, down-to-earth guy with a knack for understanding the complexities of the digital world. He doesn’t need the spotlight to shine—he lets his work and interests do that for him.
+					<br><br>
+					Final thoughts? <br>
+					Just like every great adventure has its moments of pause, this is where his story halts... for now. But don’t be surprised if you find him navigating the next big idea in tech, or outsmarting an opponent in a game that requires both brains and nerves.
+					<br><br>
+					Oh, and thanks for dropping by... Let's get back to exploring the endless world of code.
+				</p>
 
-					<br> <br><br>
-
-					Oh, and thanks for reading...
-					Let's get back to work
- 				</p>
-
-				<section id="downloads" class="main" >
-				<h3>Download labs here.. <h3>
-
-				<ul class="actions">
-					<li><a href="courses/index.html" class="button big">Course Material</a></li>
-				</ul>
-
-				</section>
-
-					<!-- <button id="btnToggleRipples" style="margin-left:80%"> Water Ripples </button> -->
 				<!-- Banner -->
 					<section id="intro" class="main">
-						<!-- <span class="icon fa-diamond major"></span> -->
-											
 						<ul class="actions">
-							<li><a href="contest/index.html" class="button big">Programming Contest</a></li>
+							<li><a href="Portfolio/index.html" class="button big">My Portfolio</a></li>
 						</ul>
 					</section>
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://pk.linkedin.com/in/zeeshannizamani" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://pk.linkedin.com/in/sooraj" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
