--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="personal/assets/css/main.css" />
+		<link rel="stylesheet" href="Personal/assets/css/glowingName.css">
 	</head>
 	<body>
-
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="inner">
-					<h1>Sooraj Ali Panhwar</h1>
+					<h1 style="animation: animate 10s linear infinite;" >Sooraj Ali Panhwar</h1>
+
+
+					<!-- <h1><span>S</span>
+						<span>o</span>
+						<span>o</span>
+						<span>r</span>
+						<span>a</span>
+						<span>j</span> &nbsp;
+						<span>A</span>
+						<span>l</span>
+						<span>i</span>&nbsp;
+						<span>P</span>
+						<span>a</span>
+						<span>n</span>
+						<span>h</span>
+						<span>w</span>
+						<span>a</span>
+						<span>r</span>
+					</h1> -->
+					<!-- <p style="animation: animate 3s linear infinite;"> Digital Knight and Code Wizard </p> -->
 					<p> Digital Knight and Code Wizard </p>
 				</div>
 			</header>
@@ -23,49 +43,37 @@
 			<div id="wrapper">
 				<h1>About Sooraj</h1>
 				<p class="description">
-					Sooraj Ali Panhwar a.k.a Sooraj, was born on Earth, a planet spinning through the vast, mesmerizing cosmos. Unlike most, his journey in this chaotic yet fascinating world revolves around making sense of the digital universe.
+					Sooraj Ali Panhwar a.k.a <span style="font-weight: 800;">Sooraj</span>, was born on Earth, a planet spinning through the vast, mesmerizing cosmos. Unlike most, his journey in this chaotic yet fascinating world revolves around making sense of the digital universe.
 					<br><br>
 					Driven by curiosity and an insatiable appetite for tech, Sooraj delved deep into the realms of computer science at Quaid-E-Awam University of Engineering, Science and Technology, Nawabshah. Computer Science was more than just a subject for him—it was a way of life. He’s the kind of person who prefers the company of algorithms and code over crowded parties and noisy gatherings, often working late into the night (usually when exams are looming).
 					<br><br>
-					What defines him? <br>
+					<span style="font-weight: 800;">What defines him?</span> <br>
 					Sooraj is that lone wolf, navigating the world in his own unique way. Though he may not fit the traditional mold of a social butterfly, he finds solace in his close-knit circle of friends, indulging in discussions, sharing jokes (even if he’s more of a listener), and, of course, binge-watching Hollywood movies and sharing them with anyone who cares to ask.
 					<br><br>
 					His love for data science and app development is unmatched, making him a true digital craftsman. He's not just another face in the crowd; he’s a digital knight, wielding code like a sword and venturing into realms that most shy away from. With a flair for strategy in games and a mind wired for technology, Sooraj remains unfazed by the mundane. In his quiet way, he thrives on conquering challenges that require sharp wit and creative solutions.
 					<br><br>
-					How to reach him? <br>
+					<span style="font-weight: 800;">How to reach him?</span> <br>
 					Well, if you’re interested in exchanging thoughts, collaborating, or just need to talk tech, Sooraj is just an email away (if you manage to find it, that is).
 					<br><br>
-					Hobbies and passions? <br>
+					<span style="font-weight: 800;">Hobbies and passions?</span> <br>
 					From diving into the mysteries of books to exploring the possibilities in tech, Sooraj’s interests are as diverse as the genres he reads. Whether it’s romance, mystery, adventure, or philosophy, he finds nuggets of wisdom and inspiration to fuel his next project.
 					<br><br>
 					For those lucky enough to know him, Sooraj is a laid-back, down-to-earth guy with a knack for understanding the complexities of the digital world. He doesn’t need the spotlight to shine—he lets his work and interests do that for him.
 					<br><br>
-					Final thoughts? <br>
+					<span style="font-weight: 800;">Final thoughts?</span> <br>
 					Just like every great adventure has its moments of pause, this is where his story halts... for now. But don’t be surprised if you find him navigating the next big idea in tech, or outsmarting an opponent in a game that requires both brains and nerves.
 					<br><br>
 					Oh, and thanks for dropping by... Let's get back to exploring the endless world of code.
 				</p>
 
 				<!-- Banner -->
+				 <div class="bottom">
 					<section id="intro" class="main">
 						<ul class="actions">
-							<li><a href="Portfolio/index.html" class="button big">My Portfolio</a></li>
+							<li><a href="https://soorajalipanhwar.github.io/My-Website/" target="_blank" class="button big">My Portfolio</a></li><br>
 						</ul>
 					</section>
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://pk.linkedin.com/in/sooraj" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-					</footer>
+					</div>
 			</div>
-
-		<!-- Scripts -->
-			<script src="personal/assets/js/jquery.min.js"></script>
-			<script src="personal/assets/js/skel.min.js"></script>
-			<script src="personal/assets/js/util.js"></script>
-			<script src="personal/assets/js/main.js"></script>
-			<script src="personal/assets/js/jquery.ripples-min.js"></script>
-
 	</body>
 </html>
