--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div id="wrapper">
 				<div class="links">
 					<a href="https://github.com/Soorajalipanhwar"><img class="link1" src="assets/red linkdedin.png" alt="linkdedin"></a>
-					<a href="www.linkedin.com/in/sooraj-ali-panhwar-936150224"><img class="link2" src="assets/red Github.png" alt="github"></a>
+					<a href="www.linkedin.com/in/sooraj-ali-panhwar-936150224" target="_blank"><img class="link2" src="assets/red Github.png" alt="github"></a>
 				</div>
 				<h1 class="i">About Sooraj</h1>
 				<p class="description one" class="i">
