--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<div class="links">
-					<a href="https://github.com/Soorajalipanhwar"><img class="link1" src="assets/red linkdedin.png" alt="linkdedin"></a>
-					<a href="https://www.linkedin.com/in/sooraj-ali-panhwar-936150224/" target="_blank"><img class="link2" src="assets/red Github.png" alt="github"></a>
+					<a href="https://github.com/Soorajalipanhwar"><img class="link1" src="assets/red Github.png" alt="GitHub"></a>
+					<a href="https://www.linkedin.com/in/sooraj-ali-panhwar-936150224/" target="_blank"><img class="link2" src="assets/red linkdedin.png" alt="LinkedIn"></a>
 				</div>
 				<h1 class="i">About Sooraj</h1>
 				<p class="description one" class="i">
